dash and cards design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,16 @@
-<router-outlet></router-outlet>
+<div class="root-container">
+  <header></header>
+  <nav></nav>
+  <div class="root-content">
+    <router-outlet></router-outlet>
+  </div>
+  <footer></footer>
+</div>
+
+<!-- <div class="root-container">
+  <header></header>
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
+  <footer></footer>
+</div> -->
