--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+@import "./app/shared/scss/media";
+
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+body {
+    background: #fafafa;
+    margin: 0;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    font-family: 'Poppins';
+}
+
+mat-raised-button {
+  border: 1px solid #00aeff;
+  color: #00aeff;
+}
+
+.mat-drawer-inner-container{ overflow: hidden !important; }
