--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -1,7 +1,34 @@
-<div style="border: 1px solid black; margin: 5px; padding: 5px;">
+<!-- <section class="feed-container">
   <pre>{{ feed?.id }}</pre>
-  <label style="color: red;">{{ feed.title }}</label>
+  <label style="color: red">{{ feed.title }}</label>
   <p>{{ feed.content }}</p>
   <pre>{{ feed.date }}</pre>
-  <div *ngIf="feed.favorite === true" style="color:blueviolet">FAVORITE</div>
-</div>
+  <div *ngIf="feed.favorite === true" style="color: blueviolet">FAVORITE</div>
+</section> -->
+
+<!-- <pre>{{(userOut | async) | json }}</pre> -->
+
+<mat-card class="feed-card">
+  <mat-card-header>
+    <img
+      class="avatar"
+      src="../assets/images/{{ (userOut | async)?.firstName | lowercase }}.png"
+      alt=""
+    />
+    <div class="header">
+      <mat-card-title
+        >{{ (userOut | async)?.firstName }}
+        {{ (userOut | async)?.lastName }}</mat-card-title
+      >
+      <mat-card-subtitle>{{ feed.title }}</mat-card-subtitle>
+    </div>
+  </mat-card-header>
+
+  <mat-card-content>
+    <p>{{ feed.content }}</p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button>LIKE</button>
+    <button mat-button>SHARE</button>
+  </mat-card-actions>
+</mat-card>
