--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,14 +1,31 @@
-<p>{{ (user | async)?.firstName }} {{ (user | async)?.lastName }}</p>
+<div class="container">
 
-<div *ngIf="allUsers | async">
-  <div *ngFor="let user of (allUsers | async)">
-    <div *ngFor="let feed of user.feeds">
-      <app-feed [feed]="feed"></app-feed>
+  <ng-container *ngIf="(allUsers | async)">
+    <div *ngFor="let user of (allUsers | async)">
+      <section class="feed-container" *ngFor="let feed of user.feeds">
+        <!-- <div class="user-banner">
+          <img
+            class="avatar"
+            src="../assets/images/{{ user.firstName | lowercase }}.png"
+            alt=""
+          />
+          <span class="username">{{ user.firstName }} {{ user.lastName }}</span>
+        </div> -->
+        <app-feed [feed]="feed" [userOut]="userOut"></app-feed>
+      </section>
+      <hr />
     </div>
-    <hr>
-  </div>
-</div>
+  </ng-container>
 
-<div *ngFor="let feed of (user | async)?.feeds">
-  <app-feed [feed]="feed"></app-feed>
+  <section class="feed-container" *ngFor="let feed of (user | async)?.feeds">
+    <!-- <div class="user-banner">
+      <img
+        class="avatar"
+        src="../assets/images/{{ (user | async)?.firstName | lowercase }}.png"
+        alt=""
+      />
+      <span class="username">{{ (user | async)?.firstName }} {{ (user | async)?.lastName }}</span>
+    </div> -->
+    <app-feed [feed]="feed" [userOut]="userOut"></app-feed>
+  </section>
 </div>
