added card elevation

--- a/src/app/feed/feed.component.html
+++ b/src/app/feed/feed.component.html
@@ -8,7 +8,7 @@
 
 <!-- <pre>{{(userOut | async) | json }}</pre> -->
 
-<mat-card class="feed-card">
+<mat-card class="feed-card mat-elevation-z2">
   <mat-card-header>
     <img
       class="avatar"
