--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -1,6 +1,6 @@
 .container {
-  // margin: .75em;
-  // width: 800px;
+  max-width: 100vw;
+  margin: 0;
 }
 
 .container.desktop {
@@ -14,7 +14,6 @@
 }
 
 .feed-container {
-  // width: 100%;
   padding: 10px 10px 10px 10px;
 }
 
@@ -34,7 +33,18 @@
 
 @media screen and (min-width: 660px) {
 
+  .container {
+    margin: 0;
+  }
+
   .feed-container {
     padding: 10px 30px 10px 10px;
+  }
+}
+
+@media screen and (max-width: 959px) {
+
+  .container {
+    margin: 5px 5px 5px 5px;
   }
 }
