--- a/src/app/feed/feed.component.scss
+++ b/src/app/feed/feed.component.scss
@@ -1,12 +1,12 @@
-@media screen and (min-width: 660px) {
 
-  .feed-container {
-    padding: 10px 10px 10px 10px;
-  }
-}
 
 .feed-card {
   background-color: white;
+  padding: 16px 16px 0px 16px;
+
+  .friended {
+    font-size: small;
+  }
 
   mat-card-header {
     display: grid;
@@ -28,12 +28,21 @@
       top: 8px;
       position: relative;
     }
+  }
 
+  mat-card-header.friended {
+    display: none;
   }
 
   mat-icon-button {
     background-color: transparent;
   }
+
+  mat-card-actions.friended button {
+    // display:none;
+  }
+
+
 
   // .icon-button {
   //   transition-duration: .5s;
@@ -43,11 +52,51 @@
   //   transition-duration: .5s;
   //   transform: scale(1.5);
   // }
+}
 
+.image-post {
+  width: 100%;
+  img {
+    width: 100%;
+  }
 }
 
 mat-card-content {
   font-size: 18px;
+
+  .attribution {
+    text-align: right;
+    font-size: x-small;
+  }
 }
 
+mat-card-actions {
+  display: grid;
+  grid-template-columns: auto auto 1fr;
+}
 
+mat-card-actions.friended {
+  // display: grid;
+  // grid-template-columns: 1fr;
+}
+
+.date {
+  text-align: right;
+  font-size: x-small;
+  color: rgb(0 0 0 / 25%);
+  align-self: end;
+}
+
+@media screen and (min-width: 660px) {
+  .feed-container {
+    padding: 10px 10px 10px 10px;
+  }
+}
+
+@media screen and (min-width: 959px) {
+
+}
+
+@media screen and (min-width: 1279px) {
+
+}
