updated project name
Set name of project to my last name rather than Upkey, whom which I applied for.

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -13,7 +13,7 @@
     class="logo animate"
     [ngClass]="(isHandset$ | async) ? 'ease-logo-mobile' : 'pop-in'"
   >
-    Upkey<span>Newsfeed</span>
+    Robson<span>Newsfeed</span>
   </div>
   <div class="spacer"></div>
   <div class="nav-links" *ngIf="!(isHandset$ | async)">
